fix z-index header

--- a/css/test-design.css
+++ b/css/test-design.css
@@ -335,7 +335,7 @@ text-shadow: 0px 1px 0px #999;
 position: absolute;
 left: 0px;
 right: 0px;
-z-index: 2;
+z-index: 5;
 }
 
 #params_header .top_btn {
